objects/Metrics_Action__c.object
<CustomObject>
    <fields>
        <fullName>Action_Type__c</fullName>
        <label>Action Type</label>
        <picklist>
            <picklistValues>
                <fullName>Link</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PageDisplay</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PostbackAnchor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PostbackSubmit</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Action__c</fullName>
        <label>Action</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Email_Id__c</fullName>
        <label>Email Id</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Link_HREF__c</fullName>
        <label>Link HREF</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Link_Invoking__c</fullName>
        <label>Link Invoking</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Page_Display_HREF__c</fullName>
        <label>Page Display HREF</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Page_Pathname__c</fullName>
        <label>Page Pathname</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Postback_Anchor_HREF__c</fullName>
        <label>Postback Anchor HREF</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Postback_Anchor_Id__c</fullName>
        <label>Postback Anchor Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Postback_Anchor_Invoking_Text__c</fullName>
        <label>Postback Anchor Invoking Text</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Postback_Submit_Id__c</fullName>
        <label>Postback Submit Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Postback_Submit_Value__c</fullName>
        <label>Postback Submit Value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>User_ID__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>User ID</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Metrics_Actions</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Metrics Action</label>
    <nameField>
        <displayFormat>MA-{00000000}</displayFormat>
        <label>Metrics Action ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Metrics Actions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>